[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-reverb"
version = "0.1.0"
description = "Async Python client for Laravel Reverb WebSocket servers"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    { name = "Terje", email = "terje@example.com" }
]
keywords = ["reverb", "pusher", "websocket", "laravel", "async", "realtime"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "websockets>=12.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/terje/python-reverb"
Documentation = "https://github.com/terje/python-reverb#readme"
Repository = "https://github.com/terje/python-reverb"
Issues = "https://github.com/terje/python-reverb/issues"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/reverb"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.ruff]
line-length = 100
target-version = "py310"
